# asltest

./: .gitignore  CHANGES.rst  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  REFERENCES.md  get_version.py  long_description.rst  setup.cfg  setup.py
aslprep/: __about__.py  __init__.py  _version.py  config.py
aslprep/cli/: aslprep_bold_mask.py  fmriprep_bold_mask.py  run.py  sample_openfmri.py  sample_openfmri_tasks_list.py  version.py
aslprep/cli/tests/: test_run.py  test_version.py
aslprep/data/: boilerplate.bib  reports-spec.yml
aslprep/interfaces/: __init__.py  confounds.py  fmap.py  reports.py
aslprep/niworkflows/: _version.py
aslprep/niworkflows/func/: util.py
aslprep/niworkflows/interfaces/: cbf_computation.py
aslprep/niworkflows/niworkflows/: _version.py
aslprep/niworkflows/reports/: core.py  figures.json  fmriprep.yml
aslprep/utils/: sentry.py
aslprep/workflows/: anatomical.py  base.py
aslprep/workflows/asl/: __init__.py  base.py  confounds.py  hmc.py  outputs.py  registration.py  resampling.py  stc.py  t2s.py  util.py
aslprep/workflows/bold/: __init__.py  base.py  cbf.py  cbf_computation.py  confounds.py  hmc.py  outputs.py  registration.py  resampling.py  stc.py  t2s.py  util.py
aslprep/workflows/fieldmap/: __init__.py  base.py  fmap.py  phdiff.py  syn.py  unwarp.py
docs/: api.rst  citing.rst  conf.py  contributors.rst  faq.rst  index.rst  installation.rst  license.rst  links.rst  outputs.rst  sdc.rst  spaces.rst  usage.rst  workflows.rst
docs/api/: index.rst
fmriprep/: __about__.py  __init__.py  _version.py  config.py
fmriprep/cli/: fmriprep_bold_mask.py  run.py  sample_openfmri_tasks_list.py
fmriprep/interfaces/: __init__.py  reports.py
fmriprep/niworkflows/utils/: bids.py
fmriprep/utils/: bids.py  bspline.py  maths.pyx  sentry.py  testing.py
fmriprep/workflows/: anatomical.py  base.py
fmriprep/workflows/asl/: __init__.py  confounds.py  registration.py  resampling.py  stc.py
fmriprep/workflows/bold/: __init__.py  base.py  confounds.py  hmc.py  outputs.py  registration.py  resampling.py  stc.py  t2s.py  util.py
fmriprep/workflows/fieldmap/: base.py  pepolar.py
scripts/: generate_reference_mask.py
wrapper/: aslprep_docker.py  fmriprep_docker.py  setup.cfg  setup.py
(+2 files in other folders)
