[metadata]
url = https://github.com/poldracklab/aslprep
author = The CRN developers
#author_email = 
maintainer = azeez adebimpe
maintainer_email = az@az.com
description = ASLPrep is a robust and easy-to-use pipeline for preprocessing of diverse fMRI data.
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.5
install_requires =
    indexed_gzip >=0.8.8
    nibabel >=2.2.1
    nipype ~= 1.4.0
    nitime
    numpy
    pandas
    psutil >=5.4
    pybids ~= 0.9.4
    pyyaml
    sdcflows <= 0.1.2
    smriprep ~= 0.3.2
    tedana >=0.0.5
    templateflow ~= 0.4.1
test_requires =
    coverage
    codecov
    pytest
packages = find:
include_package_data = True

[options.exclude_package_data]
* = tests

[options.extras_require]
datalad = datalad
doc =
    nbsphinx
    packaging
    pydot >=1.2.3
    pydotplus
    sphinx >=1.5.3
    sphinx-argparse
    sphinx_rtd_theme
    sphinxcontrib-napoleon
docs =
    %(doc)s
duecredit = duecredit
resmon =
sentry = sentry-sdk >=0.6.9
tests =
    coverage
    codecov
    pytest
all =
    %(datalad)s
    %(doc)s
    %(duecredit)s
    %(sentry)s
    %(tests)s

[options.package_data]
aslprep =
    data/*.json
    data/*.nii.gz
    data/*.mat
    data/boilerplate.bib
    data/itkIdentityTransform.txt
    data/flirtsch/bbr.sch
    VERSION

[options.entry_points]
console_scripts =
    aslprep=aslprep.cli.run:main
    aslprep-boldmask=aslprep.cli.aslprep_bold_mask:main
    sample_openfmri=aslprep.cli.sample_openfmri:main

[versioneer]
VCS = git
style = pep440
versionfile_source = aslprep/_version.py
versionfile_build = aslprep/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = True
exclude=*build/
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501
